--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-$Id: AUTHORS,v 1.2 2009/08/09 13:58:49 mpeppler Exp $
+$Id: AUTHORS,v 1.3 2012/05/02 11:12:26 mwesdorp Exp $
 
 Sqsh was written by Scott C. Gray. Scott did all the work through
 release 2.1.
@@ -8,5 +8,6 @@ with the principal aim to keep sqsh's features and behavior in sync with
 Sybase's capabilities as new features are added to ASE.
 
 Sqsh is also maintained by Martin Wesdorp (mwesdorp@users.sourceforge.net)
-Releases 2.1.6, 2.1.7 and 2.1.8 includes a lot of code contributed by Martin
-like color prompts, better kerberos support, better timeout handling, etc.
+Releases 2.1.6, 2.1.7, 2.1.8 and 2.1.9 includes a lot of code contributed
+by Martin like color prompts, better kerberos support, better timeout handling,
+etc.
