--- a/doc/CHANGES-2.1.9
+++ b/doc/CHANGES-2.1.9
@@ -53,7 +53,7 @@
                   "net password encryption reqd" that can be set to 1 to force
                   clients to use CT-Lib password encryption of the password that
                   is send over the network from the client to the server. Plain
-                  passwords are not excepted over the network in that case.
+                  passwords are not accepted over the network in that case.
                   If the configuration parameter is set to 2, then the client must
                   even perform stronger RSA password encryption.
                   If the parameter is set to the default value of 0, then no net
