--- a/doc/sqsh.pod
+++ b/doc/sqsh.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-sqsh - Interactive database shell (version 2.1.9)
+sqsh - Interactive database shell (version 2.2.0)
 
 =head1 SYNOPSIS
 
@@ -232,7 +232,7 @@ Display performance statistics upon completion of every SQL batch. This option
 may also be turned on via the B<$statistics> variable, or by supplying the B<-p>
 flag to the B<\go> command.
 
-=item -P [password]
+=item -P [password | -]
 
 The Sybase I<password> for I<username> required to connect to I<server>
 (default, NULL). The I<password> may also be set via B<$password>. Supplying a
@@ -1142,11 +1142,11 @@ when invoked.
 =item ${0}..${N}
 
 Expands to positional arguments to the function. ${0} is the name of the
-function being invoked, ${1} is the first argument, ${2} the second and so-on,
-up to argument I<N>. Note that, unlike most shells, sqsh requires that function
-arguments be referred to using the special curly brace syntax (${1}, rather than
-$1). The reason for this is that $1 is a valid MONEY value and using the curly
-braces gets rid of this ambiguity.
+function or the script file being invoked, ${1} is the first argument,
+${2} the second and so-on, up to argument I<N>. Note that, unlike most shells,
+sqsh requires that function arguments be referred to using the special curly
+brace syntax (${1}, rather than $1). The reason for this is that $1 is a valid
+MONEY value and using the curly braces gets rid of this ambiguity.
 
 =item $?
 
@@ -1569,7 +1569,7 @@ not change between subsequent executions.
 
 =back
 
-=item \bcp [bcp_options] table
+=item \bcp [bcp_options] table[:slicenumber|:partition name]
 
 The B<\bcp> commands acts as a sort of enhanced B<\go> command that redirects
 the result set(s) of the batch to another server via the bcp protocol. While it
@@ -1644,6 +1644,11 @@ B<$password> if not supplied.
 The name of the Sybase I<server> to connect, this defaults to B<$DSQUERY> if not
 supplied.
 
+=item -T
+
+Transfer the data in transit without performing character set conversion
+at the client side.
+
 =item -U user
 
 The Sybase I<user> to connect to the database as, this defaults to B<$username>
@@ -1658,13 +1663,16 @@ client-side encryption.
 
 Specifies the language setting to use.
 
-=item table
+=item table[:slicenumber|:partition name]
 
 As with regular B<bcp>, I<table> may be either a fully or partially specified
 table name in the destination server. Note that since a new database connection
 is established during the bcp processes that the database context of the
 connection may not be the same as the current context, so it is usually safest
 to fully specify the table name in the form database.owner.table.
+For partitioned tables you may supply a slicenumber or a partition name
+(separate table name and partition with a colon (:)) to bcp the data into the
+specified partition.
 
 =back
 
@@ -2050,13 +2058,14 @@ as return value to the shell upon exit of I<sqsh>. (0 <= x <= 255).
 Causes all nested read-eval-print loops to abort processing, causing I<sqsh> to
 exit with an exit value of 254 (see section B<EXIT STATUS>).
 
-=item \read [-a] [-n] [-h] var_name
+=item \read [-a] [-n] [-h] var_name [< filename]
 
 Reads a line of input from the user, placing the text of the line in the
 variable I<var_name>. If the B<-n> is used, then the trailing new-line is left
 on the line of text, and if B<-a> is supplied, then the text of the line is
 appended to the existing value of I<var_name>. The B<-h> flag turns off echoing
-of typed characters back to the user.
+of typed characters back to the user. It is also possible to read the contents
+of a file using the I<\<> file redirection notation.
 
 =item \sleep seconds
 
@@ -2091,12 +2100,10 @@ variable.
 =item \lock
 
 Locks the current session until the correct password is typed. By default
-B<\lock> attempts to use the UNIX password (from /etc/passwd) associated with
-the user running I<sqsh>, however if the B<$lock> variable is set then the
-contents of that is used for validation instead.
-
-Note, on systems using Shadow Passwords (in which even the encrypted password is
-unavailable), B<\lock> will only work using the B<$lock> variable.
+B<\lock> attempts to use the UNIX password (from /etc/passwd or /etc/shadow)
+associated with the user running I<sqsh> (if sqsh is linked with the crypt
+library), however if the B<$lock> variable is set then the contents of that is
+used for validation instead.
 
 =back
 
@@ -2183,6 +2190,23 @@ it will not be interpreted. This includes multiple quotes. For example:
 
 In the above example, only the second semicolon (the one at the end of the line)
 will be interpreted.
+The variable B<$semicolon_cmd> is a string that contains the command that will
+be substituted by the semicolon which is B<\go> by default. But you can change
+that to B<\bcp> for example and execute:
+
+    1> select * from pubs2..titles; -S... tempdb..titles
+
+In sqsh-2.2.0 you can also set variable B<$semicolon_hack2> to allow multiple
+commands on one line to be fired by a semicolon. If this option is set you
+cannot use the construct above to pass additional parameters to the B<\go>
+command. But of course you can change B<$semicolon_cmd> to your needs as this
+command will be used to execute SQL batches.
+
+    echo "exec sp_who;exec sp_helpdb;\echo Done;" | sqsh -S... -U... -P...
+
+In this example the semicolon acts as a B<\go> command to a SQL buffer and as
+a command separator for sqsh commands that will be executed in sequence.
+Note that B<$semicolon_hack2> takes precedence over B<$semicolon_hack>.
 
 =head1 SPECIAL VARIABLES
 
@@ -2572,8 +2596,23 @@ If I<sqsh> has been compiled with debugging enabled (-DDEBUG), this variable may
 be used to control the amount of debugging output displayed. B<$debug> may be
 set to a pipe (|) delimited (logical OR) set of the following words to turn on
 various pieces of debugging: B<ALIAS>, B<AVL>, B<BCP>, B<DISPLAY>, B<ENV>,
-B<ERROR>, B<EXPAND>, B<FD>, B<JOB>, B<READLINE> (abbr. B<RL>), B<RPC>,
-B<SCREEN>, B<SIG>, B<SIGCHLD> (or B<SIGCLD>) or B<ALL>.
+B<ERROR>, B<EXPAND>, B<FD>, B<HISTORY> (abbr. B<HIST>), B<JOB>,
+B<READLINE> (abbr. B<RL>), B<RPC>, B<SCREEN>, B<SIG>, B<SIGCHLD> (or B<SIGCLD>),
+B<TDS> or B<ALL>. Can also be set through the I<-l> startup option.
+
+=item debug_tds_capture (string)
+
+When B<TDS> debugging is enabled and this variable is defined with a valid file
+name, a debugging trace will be logged into this file that can be analyzed with
+Ribo. You might need the devlib versions of the OpenClient library to link with
+sqsh to be able to use this option. See for more information the ct_debug
+function in the Sybase SDK documentation. 
+
+=item debug_tds_logdata (string)
+
+When B<TDS> debugging is enabled and this variable is defined with a valid
+filename, a debugging log will be written by OpenClient with all possible
+debugging info (CS_DBG_ALL). See also option above.
 
 =item defer_bg (boolean)
 
@@ -2668,6 +2707,15 @@ When variable B<$histsave> is on and the B<$hist_auto_save> variable has a value
 greater than 0, then the history will be automatically saved to B<$history>
 after B<$hist_auto_save> modifications of the history buffers. When the value is
 0 (default), then no automatic history save will be performed.
+
+=item histmerge (boolean)
+
+When this option is on, sqsh will merge the contents of the history on disk
+with the history in memory before writing the history back to disk. This is
+to prevent data loss in the history file when other sqsh sessions have also
+written to the same history file on disk. This option is off by default which
+will just overwrite the existing history file when you exit sqsh or the
+history is being automatically saved because of B<$hist_auto_save> being set.
 
 =item histnum (int)
 
@@ -2872,7 +2920,7 @@ B<$max_timeout> limit is reached.
 Controls the maximum amount of data that will be displayed (in any display mode)
 in a single column. This setting will automatically truncate the output of
 particularly large data types (such as TEXT) to the value supplied. The default
-setting is 8192 bytes (8KB).
+setting is 32768 bytes (32KB).
 
 =item newline_go (boolean)
 
@@ -2937,6 +2985,23 @@ Contains a colon (:) delimited list of sqsh resource (sqshrc) files. The default
 setting is /usr/local/etc/sqshrc (unless overridden by the --prefix option when
 sqsh was compiled) followed by I<$HOME/.sqshrc>).
 
+=item readline_histignore (string)
+
+If readline support has been compiled into I<sqsh>, you can control which
+commands or statements on the command line will be filtered from the readline
+history file specified by B<$readline_history>. It is a colon (:) separated
+string or a string containing a regular expression that is identified by "RE:".
+For example:
+
+  \set readline_histignore='go:lo:mo:exit:quit:vi:!!:GO'
+  or
+  \set readline_histignore='"RE:^[glm]o$|^cd |^exit$|^quit$|^vi$"'
+
+The regular expression in the second example starts with I<RE:> and it is
+recommended to supply the string between quotes and double quotes to prevent
+expansion and display problems due to the pipe characters. The regular
+expression is evaluated case insensitive.
+
 =item readline_history (string)
 
 If readline support has been compiled into I<sqsh>, the contents of the readline
@@ -2994,7 +3059,12 @@ defaults to the string 'B<\go>'.
 
 Toggles on the ability to use a ';' as an in-line command terminator. This
 feature is not recommended and is only in here because enough users complained.
-See section B<COMMANDS, In-Line Go>.
+See section B<COMMANDS, In-Line \go>.
+
+=item semicolon_hack2 (boolean)
+
+Toggles on the ability to use multiple ';' as an in-line command terminator.
+See section B<COMMANDS, In-Line \go>.
 
 =item session (string)
 
@@ -3011,7 +3081,7 @@ B<\shell> command (default '/bin/sh').
 
 Setting B<$statistics> to 1 causes timing statistics to be displayed upon the
 successful execution of every batch of SQL. This variable may also be set via
-the B<-t> command line flag, or by supplying B<-t> to the B<\go> command.
+the B<-p> command line flag, or by supplying B<-p> to the B<\go> command.
 B<$statistics> defaults to 0.
 
 =item style (string)
