--- a/doc/sqsh.1
+++ b/doc/sqsh.1
@@ -124,13 +124,13 @@
 .\" ========================================================================
 .\"
 .IX Title "sqsh 1"
-.TH sqsh 1 "2013-07-23" "2.3" "sqsh-2.3"
+.TH sqsh 1 "2013-08-26" "2.4" "sqsh-2.4"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
 .nh
 .SH "NAME"
-sqsh \- Interactive database shell (version 2.3)
+sqsh \- Interactive database shell (version 2.4)
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
 .Vb 10
@@ -1122,7 +1122,7 @@ followed by a number) may be used to reference the values in the returned query.
 For example the following command:
 .PP
 .Vb 8
-\&    select id, name from master..sysdatabases
+\&    select dbid, name from master..sysdatabases
 \&    \edo
 \&        \eecho "Checkpointing database #2, dbid #1"
 \&        use #2
@@ -2685,7 +2685,25 @@ completion is requested, \fIsqsh\fR dynamically creates a list of columns that
 belongs to the object (table, view, procedure) and allows for Readline \s-1TAB\s0
 completion of the column or parameter names. This feature is only available if
 \&\s-1GNU\s0 Readline support has been compiled into \fIsqsh\fR and \fB\f(CB$keyword_completion\fB\fR
-is set to a value greater than zero.
+is set to a value greater than zero. In sqsh\-2.4 it is also possible to use
+the object alias in the \s-1SQL\s0 buffer for auto-completion. For example when you
+enter the following query in the buffer and type the \s-1TAB\s0 key twice after
+the alias 'd' and the dot, a list of column names will be produced for the
+\&'sysdatabases' table for further completion:
+.Sp
+.Vb 9
+\&    SYBPROD.sa.tempdb.1> select * from master..sysdatabases d,
+\&    SYBPROD.sa.tempdb.2>               master.dbo.sysusages u
+\&    SYBPROD.sa.tempdb.3> where d.<TAB><TAB>
+\&    d.audflags         d.def_remote_loc   d.durability       d.status2
+\&    d.audflags2        d.def_remote_type  d.logptr           d.status3
+\&    d.crdate           d.deftabaud        d.name             d.status4
+\&    d.dbid             d.defvwaud         d.spare            d.suid
+\&    d.defpraud         d.dumptrdate       d.status           d.version
+\&    SYBPROD.sa.tempdb.3> where d.
+.Ve
+.Sp
+Note that sqsh is now able to perform cross database auto-completion.
 .IP "keyword_file (string)" 4
 .IX Item "keyword_file (string)"
 If Readline support has been compiled into \fIsqsh\fR, and \fIsqsh\fR is being run in
@@ -3020,6 +3038,15 @@ This contains the directory to which temporary files used internally by \fIsqsh\
 are to be written. These files are generated either during buffer editing (the
 \&\fB\ebuf\-edit\fR command), or to maintain output defer files for background jobs.
 The default value for this variable is /tmp.
+.IP "usedbcheck (boolean)" 4
+.IX Item "usedbcheck (boolean)"
+When this variable is set to 'On' (default is 'Off') and a database name is
+provided with the \-D parameter and sqsh is run in batch mode, then a check
+will be performed if the named database is accessible, otherwise sqsh is
+aborted with exit code 254. Also the following error message will be shown:
+  sqsh: \s-1ERROR:\s0 Unable to use database '...' in batch mode
+This is to prevent that a \s-1SQL\s0 script is inadvertently executed in the wrong
+database.
 .IP "username (string)" 4
 .IX Item "username (string)"
 The name of the user currently connected to the database.
